--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <head></head>
 
     <div class="wrapper">
-      
+
 
     </div><!-- //wrapper  -->
 
     <footer></footer>
 
-    <script src="crown_anchor.js"></script>
+    <script src="function.js"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
