--- a/index.html
+++ b/index.html
@@ -13,19 +13,27 @@
 
 
   <body>
-    <head></head>
+    <header></header>
 
     <div class="wrapper">
-
+      <div id="box"></div>
+      <p>jQuery_Practice</p>
 
     </div><!-- //wrapper  -->
 
     <footer></footer>
 
-    <script src="function.js"></script>
+    <!-- <script src="function.js"></script> -->
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script>
+      $(function() {
+        // console.log($("p".text());
+        console.log($('p').text());
+      });
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
