--- a/VueApp/vue_app.html
+++ b/VueApp/vue_app.html
@@ -7,9 +7,19 @@
   </head>
   <body>
     <a class="to_top" href="../index.html">index.htmlへ</a>
-    <div id="app">
-      <p>Hello {{ name.toUpperCase() }}!</p>
-      <p><input type="text" v-model="name"></p>
+    <div id="app" class="container">
+      <h1>My Todos</h1>
+      <ul>
+        <li v-for="(todo, index) in todos">
+          <input type="checkbox" v-model="todo.isDone">
+          <span :class="{done: todo.isDone}">{{ todo.title }}</span>
+          <span @click="deleteItem(index)" class="command">[x]</span>
+        </li>
+      </ul>
+      <form @submit.prevent="addItem">
+        <input type="text" v-model="newItem">
+        <input type="submit" value="Add">
+      </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
