--- a/VueApp/vue_app.html
+++ b/VueApp/vue_app.html
@@ -8,13 +8,18 @@
   <body>
     <a class="to_top" href="../index.html">index.htmlへ</a>
     <div id="app" class="container">
-      <h1>My Todos</h1>
+      <h1>
+        <button @click="purge">Purge</button>
+        My Todos
+        <span class="info" >({{ remaining.length }}/{{ todos.length }})</span>
+      </h1>
       <ul>
         <li v-for="(todo, index) in todos">
           <input type="checkbox" v-model="todo.isDone">
           <span :class="{done: todo.isDone}">{{ todo.title }}</span>
           <span @click="deleteItem(index)" class="command">[x]</span>
         </li>
+        <li v-if="!todos.length">Nothing to do today. Have a nice day!</li>
       </ul>
       <form @submit.prevent="addItem">
         <input type="text" v-model="newItem">
