いいねボタン設定

--- a/VueApp/vue_app.html
+++ b/VueApp/vue_app.html
@@ -25,6 +25,9 @@
         <input type="text" v-model="newItem">
         <input type="submit" value="Add">
       </form>
+      <like-compornent message="Great"></like-compornent>
+      <like-compornent message="Awesome"></like-compornent>
+      <like-compornent></like-compornent>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
